hphp/hack/test/typecheck/reactive/test_obj_set2.php.coeffects.exp
File "test_obj_set2.php", line 10, characters 3-11:
This object's property is being mutated (used as an lvalue)
Setting non-mutable object properties requires the capability WriteProperty, which is not provided by the context. (Typing[4401])
  File "test_obj_set2.php", line 9, characters 22-23:
  The local (enclosing) context provides the capability set {}
