hphp/hack/test/typecheck/reactive/test_obj_set2.php
<?hh // strict
<<file: __EnableUnstableFeatures('coeffects_provisional')>>

class Foo {
  public function __construct(public string $value) {}
}

<<__Rx>>
function test(Foo $x)[rx]: void {
  $x->value .= 5;
}
